reload also checks the bus again for devices